force-app/main/default/objects/Assessment_Additional_Lookup_Config__mdt/Assessment_Additional_Lookup_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for customizing additional lookup retrieval and saving logic in Assessment module</description>
    <label>Assessment Additional Lookup Config</label>
    <pluralLabel>Assessment Additional Lookup Configs</pluralLabel>
</CustomObject>