force-app/main/default/objects/Assessment_Additional_Lookup_Config__mdt/fields/Additional_Lookup_Display_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Additional_Lookup_Display_Field_API__c</fullName>
    <description>Optional: Field API name on lookup target object to display in Outcome Details (defaults to Name if not specified)</description>
    <label>Additional Lookup Display Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>