force-app/main/default/objects/Assessment_Additional_Lookup_Config__mdt/fields/Additional_Lookup_Field_API_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Additional_Lookup_Field_API_Subscriber__c</fullName>
    <description>Optional: Custom field API name on Outcome object to store additional lookup record (defaults to caresp__Client__c if not specified). Subscriber editable field.</description>
    <label>Lookup Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>