force-app/main/default/objects/Assessment_Additional_Lookup_Config__mdt/fields/Additional_Lookup_Label__c.field-meta.xml
<CustomField>
    <fullName>Additional_Lookup_Label__c</fullName>
    <description>Optional: Label to display for the additional lookup field in Outcome Details (defaults to &quot;Client&quot; if not specified)</description>
    <label>Additional Lookup Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>