force-app/main/default/objects/Assessment_Additional_Lookup_Config__mdt/fields/Custom_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Class_Name__c</fullName>
    <description>Name of custom Apex class implementing IAssessmentAdditionalLookupProvider interface</description>
    <label>Custom Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>