force-app/main/default/objects/Assessment_Additional_Lookup_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/disable custom implementation</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>