force-app/main/default/objects/Assessment_Additional_Lookup_Config__mdt/fields/Lookup_Display_Field_API_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Display_Field_API_Subscriber__c</fullName>
    <description>Optional: Field API name on lookup target object to display in Outcome Details (defaults to Name if not specified). Subscriber editable field.</description>
    <label>Display Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>